[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://our_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Sprites/Averia-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/marker.png" type="Texture" id=4]
[ext_resource path="res://Assets/Materials/FireHealthbar.tres" type="Material" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_bottom = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 23
outline_color = Color( 0.92549, 0.729412, 0.729412, 1 )
font_data = ExtResource( 3 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="FireHealthbar" type="ColorRect" parent="."]
visible = false
material = ExtResource( 5 )
anchor_left = 0.15
anchor_top = 0.02
anchor_right = 0.989
anchor_bottom = 0.07

[node name="FPSCounter" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.5
margin_top = -42.0
margin_right = 94.5
margin_bottom = 42.0

[node name="GameOverBox" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 8.0
margin_top = -2.0
margin_right = 180.0
margin_bottom = 85.0

[node name="GameOverLabel" type="Label" parent="CenterContainer/GameOverBox"]
margin_right = 172.0
margin_bottom = 43.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="RestartButton" type="Button" parent="CenterContainer/GameOverBox"]
margin_top = 47.0
margin_right = 172.0
margin_bottom = 87.0
theme = ExtResource( 2 )
text = "Restart"

[node name="InteractLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -108.0
margin_bottom = -52.0
theme = ExtResource( 2 )
text = "text"
align = 1
valign = 1

[node name="WagonMarker" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="IntroPressAnyKey" type="Label" parent="."]
anchor_top = 0.873
anchor_right = 1.0
anchor_bottom = 0.888
margin_top = -14.0
theme = ExtResource( 2 )
text = "Press any key to start"
align = 1
valign = 1

[node name="TooMuchToCarry" type="Label" parent="."]
modulate = Color( 1, 0.984314, 0, 1 )
anchor_top = 0.774
anchor_right = 1.0
anchor_bottom = 0.823
margin_top = -14.0
theme = ExtResource( 2 )
text = "Too much to carry"
align = 1
valign = 1

[node name="PauseView" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="PauseView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.756863 )

[node name="CenterContainer" type="CenterContainer" parent="PauseView/ColorRect"]
margin_left = 393.0
margin_top = 239.0
margin_right = 631.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseView/ColorRect/CenterContainer"]
margin_left = 22.0
margin_right = 215.0
margin_bottom = 188.0

[node name="PausedLabel" type="Label" parent="PauseView/ColorRect/CenterContainer/VBoxContainer"]
margin_right = 193.0
margin_bottom = 58.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "PAUSED"
align = 1
valign = 1

[node name="PausedLabel2" type="Label" parent="PauseView/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 193.0
margin_bottom = 88.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "[ESC] to unpause"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="PauseView/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 193.0
margin_bottom = 188.0

[node name="MusicLabel" type="Label" parent="PauseView/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_right = 193.0
margin_bottom = 26.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Music "
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="PauseView/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 30.0
margin_right = 193.0
margin_bottom = 46.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.02
value = 0.8

[node name="SFXLabel" type="Label" parent="PauseView/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 50.0
margin_right = 193.0
margin_bottom = 76.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Sound Effects"
align = 1
valign = 1

[node name="SFXSlider" type="HSlider" parent="PauseView/ColorRect/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 80.0
margin_right = 193.0
margin_bottom = 96.0
grow_horizontal = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.02
value = 0.8

[connection signal="pressed" from="CenterContainer/GameOverBox/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="value_changed" from="PauseView/ColorRect/CenterContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="PauseView/ColorRect/CenterContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
